fixed issue on safari with button

--- a/css/style.css
+++ b/css/style.css
@@ -416,7 +416,7 @@ img{
     }
 
     .hide-on-phone{
-        visibility: hidden;
+        display: none !important;
     }
     .hide-on-computer{
         visibility: visible;
